# cpp-app-template

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  fetchcontent-lockfile.json
.github/workflows/: ci.yml
apps/: CMakeLists.txt  main.cpp
apps/snake_qt/: CMakeLists.txt  game_widget.cpp  game_widget.hpp  main.cpp  snake_window.cpp  snake_window.hpp
cmake/: mb.cpp-app-template-config.cmake.in
examples/: CMakeLists.txt  usage.cpp
include/mb/cpp-app-template/: CMakeLists.txt  cpp-app-template.hpp
libs/core/: CMakeLists.txt  snake_game.test.cpp
libs/core/include/core/: core.hpp  snake_game.hpp
libs/core/src/: core.cpp  core.test.cpp  snake_game.cpp
scripts/: new-cpp-app.py  new-cpp-lib.py
src/: CMakeLists.txt  cpp-app-template.cpp  cpp-app-template.test.cpp
